--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --color-primary: #ece9e1;
+    --color-accent: #e43c13;
+  }
+
+  html {
+    @apply bg-primary text-accent;
+  }
+}
